Changes in version 0.1.0 (2019-09-17):

+ initial commit 

Changes in version 0.2.0 (2019-11-28):

+ The functions calculateSummary, plotCellCounts, and plotDist have been added 

Changes in version 0.3.0 (2021-05-07):

+ Added helper functions for spillover correction
+ Removed redundant functions

Changes in version 0.3.1 (2021-05-15):

+ readSCEfromTXT accepts list and path

Changes in version 0.3.2 (2021-05-16):

+ adjusted plotSpotHeatmap function and unit test

Changes in version 0.3.3 (2021-05-17):

+ unit tests for binAcrossPixels

Changes in version 0.3.4 (2021-05-18):

+ added readImagefromTXT function and tests

Changes in version 0.3.5 (2021-05-20):

+ unit tests and docs for filterPixels

Changes in version 0.3.6 (2021-06-04):

+ added read_steinbock function, docs and tests

Changes in version 0.3.7 (2021-06-14):

+ added read_cpout function, docs and tests

Changes in version 0.3.8 (2021-06-30):

+ Adjusted default parameters for read_steinbock function
+ Added updated test data

Changes in version 0.3.9 (2021-07-29):

+ Added buildSpatialGraph function
+ Added plotSpatial function
+ Added aggregateNeighbors function

Changes in version 0.3.10 (2021-08-18):

+ Added countInteractions function
+ Added testInteractions function

Changes in version 0.3.11 (2021-08-19):

+ Added flip_x, flip_y argument for plotSpatial function
