@@ -86,6 +86,7 @@ importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_split)
 importFrom(tidygraph,tbl_graph)
 importFrom(utils,globalVariables)
 importFrom(viridis,scale_color_viridis)
