@@ -1,15 +1,44 @@
 # Check function for SCE from TXT function
 #' @importFrom stringr str_extract
 .valid.readSCEfromTXT.input <- function(txt_list, cur_names,
-                                        metadata_cols, verbose){
+                                        metadata_cols, verbose,
+                                        read_metal_from_filename){
 
     # Check if names are all of the format Mt123 where Mt is the metal name
     # and 123 is the mass
-    cur_mass <- str_extract(cur_names, "[0-9]{2,3}$")
-    cur_names <- cur_names[order(as.numeric(cur_mass))]
-
-    if (!all(grepl("^[A-Za-z]{2}[0-9]{2,3}$", cur_names))) {
-        stop("Not all names match the pattern (mt)(mass).")
+    if (read_metal_from_filename) {
+        cur_mass <- str_extract(cur_names, "[0-9]{2,3}$")
+        cur_names <- cur_names[order(as.numeric(cur_mass))]
+        
+        if (!all(grepl("^[A-Za-z]{2}[0-9]{2,3}$", cur_names))) {
+            stop("Not all names match the pattern (mt)(mass).")
+        }
+        
+        # Check if spotted channel is also open
+        cur_channels <- str_extract(colnames(txt_list[[1]]),
+                                    "[A-Za-z]{1,2}[0-9]{2,3}Di")
+        cur_channels <- cur_channels[!is.na(cur_channels)]
+        cur_channels <- sub("Di", "", cur_channels)
+        
+        # Verbose option will print possible missmatched between acquired and open
+        # channels
+        spot_not_ac <- cur_names[!(cur_names %in% cur_channels)]
+        ac_not_spot <- cur_channels[!(cur_channels %in% cur_names)]
+        if (verbose) {
+            cat("Spotted channels: ", paste(cur_names, collapse = ", "))
+            cat("\n")
+            cat("Acquired channels: ", paste(cur_channels, collapse = ", "))
+            cat("\n")
+            cat("Channels spotted but not acquired: ",
+                paste(spot_not_ac, collapse = ", "))
+            cat("\n")
+            cat("Channels acquired but not spotted: ",
+                paste(ac_not_spot, collapse = ", "))
+        }
+        
+        if (!all(cur_names %in% cur_channels)) {
+            stop("Not all spotted channels were acquired.")
+        }
     }
 
     # Check if metadata_cols are in each file
@@ -20,33 +49,6 @@
     if (!all(unlist(cur_check))) {
         stop("Not all 'metadata_cols' are present in entries to 'txt_list'")
     }
-
-    # Check if spotted channel is also open
-    cur_channels <- str_extract(colnames(txt_list[[1]]),
-                                "[A-Za-z]{1,2}[0-9]{2,3}Di")
-    cur_channels <- cur_channels[!is.na(cur_channels)]
-    cur_channels <- sub("Di", "", cur_channels)
-
-    # Verbose option will print possible missmatched between acquired and open
-    # channels
-    spot_not_ac <- cur_names[!(cur_names %in% cur_channels)]
-    ac_not_spot <- cur_channels[!(cur_channels %in% cur_names)]
-    if (verbose) {
-        cat("Spotted channels: ", paste(cur_names, collapse = ", "))
-        cat("\n")
-        cat("Acquired channels: ", paste(cur_channels, collapse = ", "))
-        cat("\n")
-        cat("Channels spotted but not acquired: ",
-                paste(spot_not_ac, collapse = ", "))
-        cat("\n")
-        cat("Channels acquired but not spotted: ",
-                paste(ac_not_spot, collapse = ", "))
-    }
-
-    if (!all(cur_names %in% cur_channels)) {
-        stop("Not all spotted channels were acquired.")
-    }
-
 }
 
 #' @importFrom SummarizedExperiment colData assayNames
